--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "chart.js": "^1.1.1",
     "framer-motion": "^10.10.0",
     "react": "^18.2.0",
-    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.4.2",
